# Ultimate-Wrapper-Generator

./: CMakeLists.txt  README.md  main.cpp
Core/: UASTConsumer.cpp  UASTUtils.cpp  UASTUtils.h  UStartupArgs.cpp  UStartupArgs.h
Core/Resources/: UStrResources.h
Core/WrapperGenerator/: UWrapperGenerator.cpp  UWrapperGenerator.h  UWrapperGeneratorVB6.cpp  UWrapperGeneratorVB6.h  UWrapperGeneratorVB6Declare.cpp  UWrapperGeneratorVB6Declare.h  UWrapperGeneratorVB6IDL.cpp  UWrapperGeneratorVB6IDL.h
core/: UASTConsumer.cpp  UASTConsumer.h
core/WrapperGenerator/: UWrapperGenerator.h  UWrapperGeneratorVB6.cpp  UWrapperGeneratorVB6.h
